--- a/xinjiang-fangqi/xinjiang-fangqi.css
+++ b/xinjiang-fangqi/xinjiang-fangqi.css
@@ -31,7 +31,7 @@
 #xf-board {
   display: block;
   width: 100%;
-  max-width: 520px;
+  max-width: 100%;
   height: auto;
   cursor: crosshair;
   border-radius: 4px;
